Fixed broken layout on combination of page toolbar and top-tabbar with iOS7 statusbar fill.

--- a/framework/css/common.css
+++ b/framework/css/common.css
@@ -89,3 +89,11 @@ ons-toolbar + .page__content {
 .page__content::-webkit-scrollbar {
   display: none;
 }
+
+.tab-bar__status-bar-fill ~ .tab-bar--top__content {
+  top: 71px;
+}
+
+.tab-bar__status-bar-fill ~ .tab-bar--top {
+  padding-top: 22px;
+}
